# Decentralized_mCPP

./: .gitignore  LICENSE  README.md  comm_rad.py  demo.ipynb  main.py  robots.py  run_sim.py  simulation.py
controller/: package.xml  setup.py
controller/controller/: controller.py  radius_scheduler.py  thompson_scheduler.py
drone/: package.xml  setup.py
drone/drone/: energy_calculation.py  partition.py  radius_calculation.py  stc.py  uav_agent.py
interface/: CMakeLists.txt  package.xml
interface/srv/: ComputeEnergy.srv  ResetAgent.srv
launch/: quad_uav.py
research/: List.md
swarm/: agents.py  density.py  simulation.py
