<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ntruttmann@ethz.ch">nick</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs  </depend>
  <depend>visualization_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
